修改图片等

--- a/about-en.html
+++ b/about-en.html
@@ -471,7 +471,7 @@
 										<div class="inner" data-wow-delay="0ms" data-wow-duration="1500ms">
 											<div class="img-box animated" data-my-animate="fadeInDown100">
 												<img class="counter-img" src="images/icons/round_01.png">
-												<h5 class="counter-title">1 JCI certificated technical center</h5>
+												<h5 class="counter-title">1 Adient global technical center</h5>
 											</div>
 										</div>
 									</div>
