--- a/about.html
+++ b/about.html
@@ -459,7 +459,7 @@
 										<div class="inner" data-wow-delay="0ms" data-wow-duration="1500ms">
 											<div class="img-box animated" data-my-animate="fadeInDown100">
 												<img class="counter-img" src="images/icons/round_01.png">
-												<h5 class="counter-title">1个JCI认证技术中心</h5>
+												<h5 class="counter-title">1个Adient全球技术中心</h5>
 											</div>
 										</div>
 									</div>
