--- a/m/about-en.html
+++ b/m/about-en.html
@@ -399,7 +399,7 @@
 			<div class="content1 wow fadeInDown">
 				<div class="item-box">
 					<img src="images/icons/round_01.png" />
-					<div class="text">1 JCI certificated technical center</div>
+					<div class="text">1 Adient global technical center</div>
 				</div>
 				<div class="item-box">
 					<img src="images/icons/round_02.png" />
