--- a/m/about.html
+++ b/m/about.html
@@ -396,7 +396,7 @@
 			<div class="content1 wow fadeInDown">
 				<div class="item-box">
 					<img src="images/icons/round_01.png" />
-					<div class="text">1个JCI认证技术中心</div>
+					<div class="text">1个Adient全球技术中心</div>
 				</div>
 				<div class="item-box">
 					<img src="images/icons/round_02.png" />
