--- a/m/index-en.html
+++ b/m/index-en.html
@@ -88,6 +88,11 @@
 #index .china-map .region-list{
 	display: none;
 }
+.section3 .title{
+	position: absolute;
+	top: 10%;
+	left: 40px;
+}
 </style>
 </head>
 
@@ -126,6 +131,7 @@
 	</section>
 	<section class="section3 slide-zy">
 		<img src="images/index/3-1.jpg" />
+		<div class="title my-color2 font1 wow fadeInLeft animated">Product Center</div>
 		<div class="content">
 			<img class="zy-img" src="images/index/yz.gif">
 			<div class="content-box">
