--- a/m/profession-en.html
+++ b/m/profession-en.html
@@ -554,17 +554,16 @@
 		</div>
 	</section>
 	<section class="section11">
-		<!-- <img src="images/profession/11-1.jpg" /> -->
 		<div class="title my-bg-color7 my-color2 my-font5">Work experience</div>
 		<div id="swiper2" class="content swiper-container">
 			<div class="swiper-wrapper my-color5">
 				<div class="swiper-slide">
 					<img src="images/profession/11-1.jpg" />
-					<div class="text my-bg-color5">Office corner</div>
+					<div class="text my-bg-color5">Coffee bar</div>
 				</div>
 				<div class="swiper-slide">
 					<img src="images/profession/11-2.jpg" />
-					<div class="text my-bg-color5">Leisure Area</div>
+					<div class="text my-bg-color5">Maternal and infant room</div>
 				</div>
 				<div class="swiper-slide">
 					<img src="images/profession/11-3.jpg" />
@@ -572,11 +571,11 @@
 				</div>
 				<div class="swiper-slide">
 					<img src="images/profession/11-4.jpg" />
-					<div class="text my-bg-color5">Coffee bar</div>
+					<div class="text my-bg-color5">Canteen</div>
 				</div>
 				<div class="swiper-slide">
 					<img src="images/profession/11-5.jpg" />
-					<div class="text my-bg-color5">Restaurant</div>
+					<div class="text my-bg-color5">Traffic vehicle</div>
 				</div>
 			</div>
 		</div>
