--- a/m/profession.html
+++ b/m/profession.html
@@ -545,17 +545,16 @@
 		</div>
 	</section>
 	<section class="section11">
-		<!-- <img src="images/profession/11-1.jpg" /> -->
 		<div class="title my-bg-color7 my-color2 my-font5">工作体验</div>
 		<div id="swiper2" class="content swiper-container">
 			<div class="swiper-wrapper my-color5">
 				<div class="swiper-slide">
 					<img src="images/profession/11-1.jpg" />
-					<div class="text my-bg-color5">办公一角</div>
+					<div class="text my-bg-color5">咖啡吧</div>
 				</div>
 				<div class="swiper-slide">
 					<img src="images/profession/11-2.jpg" />
-					<div class="text my-bg-color5">休闲区</div>
+					<div class="text my-bg-color5">母婴室</div>
 				</div>
 				<div class="swiper-slide">
 					<img src="images/profession/11-3.jpg" />
@@ -563,11 +562,11 @@
 				</div>
 				<div class="swiper-slide">
 					<img src="images/profession/11-4.jpg" />
-					<div class="text my-bg-color5">咖啡吧</div>
+					<div class="text my-bg-color5">食堂</div>
 				</div>
 				<div class="swiper-slide">
 					<img src="images/profession/11-5.jpg" />
-					<div class="text my-bg-color5">餐厅</div>
+					<div class="text my-bg-color5">交通车</div>
 				</div>
 			</div>
 		</div>
