--- a/m/technology-en.html
+++ b/m/technology-en.html
@@ -325,7 +325,7 @@
 					<div class="cont1 my-font1">Industrial Design</div>
 					<div class="cont2">
 						<div>Creative Design</div>
-						<div>Surface Design</div>
+						<div>Class-A-Surface Design</div>
 						<div>Design Engineering</div>
 						<div>Color Materials</div>
 						<div>Craftsmanship</div>
