--- a/profession-en.html
+++ b/profession-en.html
@@ -731,13 +731,13 @@
 			<div class="slide">
 				<div class="content wow fadeInUp100">
 					<img src="images/profession/8-1.jpg">
-					<div class="cont-box my-bg-color5 animated">Office corner</div>
+					<div class="cont-box my-bg-color5 animated">Coffee bar</div>
 				</div>
 			</div>
 			<div class="slide">
 				<div class="content wow fadeInUp100">
 					<img src="images/profession/8-2.jpg">
-					<div class="cont-box my-bg-color5 animated">Leisure Area</div>
+					<div class="cont-box my-bg-color5 animated">Maternal and infant room</div>
 				</div>
 			</div>
 			<div class="slide">
@@ -749,13 +749,13 @@
 			<div class="slide">
 				<div class="content wow fadeInUp100">
 					<img src="images/profession/8-4.jpg">
-					<div class="cont-box my-bg-color5 animated">Coffee bar</div>
+					<div class="cont-box my-bg-color5 animated">Canteen</div>
 				</div>
 			</div>
 			<div class="slide">
 				<div class="content wow fadeInUp100">
 					<img src="images/profession/8-5.jpg">
-					<div class="cont-box my-bg-color5 animated">Restaurant</div>
+					<div class="cont-box my-bg-color5 animated">Traffic vehicle</div>
 				</div>
 			</div>
 		</div>
