--- a/profession.html
+++ b/profession.html
@@ -724,13 +724,13 @@
 			<div class="slide">
 				<div class="content wow fadeInUp100">
 					<img src="images/profession/8-1.jpg">
-					<div class="cont-box my-bg-color5 animated">办公一角</div>
+					<div class="cont-box my-bg-color5 animated">咖啡吧</div>
 				</div>
 			</div>
 			<div class="slide">
 				<div class="content wow fadeInUp100">
 					<img src="images/profession/8-2.jpg">
-					<div class="cont-box my-bg-color5 animated">休闲区</div>
+					<div class="cont-box my-bg-color5 animated">母婴室</div>
 				</div>
 			</div>
 			<div class="slide">
@@ -742,13 +742,13 @@
 			<div class="slide">
 				<div class="content wow fadeInUp100">
 					<img src="images/profession/8-4.jpg">
-					<div class="cont-box my-bg-color5 animated">咖啡吧</div>
+					<div class="cont-box my-bg-color5 animated">食堂</div>
 				</div>
 			</div>
 			<div class="slide">
 				<div class="content wow fadeInUp100">
 					<img src="images/profession/8-5.jpg">
-					<div class="cont-box my-bg-color5 animated">餐厅</div>
+					<div class="cont-box my-bg-color5 animated">交通车</div>
 				</div>
 			</div>
 		</div>
