--- a/technology-en.html
+++ b/technology-en.html
@@ -554,7 +554,7 @@
 								<div class="title">Industrial Design</div>
 								<div class="content">
 									<div>Creative Design</div>
-									<div>Surface Design</div>
+									<div>Class-A-Surface Design</div>
 									<div>Design Engineering</div>
 									<div>Color Materials</div>
 									<div>Craftsmanship</div>
