--- a/index.html
+++ b/index.html
@@ -180,6 +180,11 @@
 	left: 20%;
 	top: 30%;
 }
+.slide3 .title{
+	position: absolute;
+    top: 15%;
+    right: 20%;
+}
 </style>
 </head>
 
@@ -228,6 +233,7 @@
 			<!--第3屏-->
 			<div class="swiper-slide slide3 slide-zy">
 				<img class="slide-bg" src="images/background/bg-2-2.jpg">
+				<div class="title my-color2 font3 animated" data-my-animate="fadeInRight">产品中心</div>
 				<div class="my-all-center content">
 					<img class="zy-img animated" data-my-animate="fadeInUp100" src="images/index/yz.gif">
 					<div class="content-box">
