添加邮箱图标

--- a/common/header.html
+++ b/common/header.html
@@ -72,7 +72,13 @@
 								<li class="language-box">
 									<span class="language active" type="ch">中</span>
 									<span class="language" type="en">EN</span>
+									<span class="email">
+										<a href="http://www.miitbeian.gov.cn"  target="_blank" style="font-size: 14px;">
+											<img src="images/email.png"/>
+										</a>
+									</span>
 								</li>
+								
 						</ul>
 					</div>
 				</nav><!-- Main Menu End-->
