--- a/m/common/header-en.html
+++ b/m/common/header-en.html
@@ -34,6 +34,11 @@
 		<li class="language-box" data-type="about">
 			<span class="language" type="ch">中</span>
 			<span class="language active" type="en">EN</span>
+			<span class="email">
+				<a href="http://www.miitbeian.gov.cn"  target="_blank" style="font-size: 14px;">
+					<img style="width:40px;" src="images/email.png"/>
+				</a>
+			</span>
 		</li>
 	</ul>
 </div>
