--- a/index-en.html
+++ b/index-en.html
@@ -206,22 +206,23 @@
 				<div id="first-slide-swiper" class="swiper-container">
 					<div class="swiper-wrapper">
 						<div class="swiper-slide">
-							<img class="slide-bg" src="images/index/image-1.jpg">
+							<img class="slide-bg" src="images/index/image-1.gif">
 						</div>
 						<!-- <div class="swiper-slide">
 							<img class="slide-bg" src="images/index/image-2.jpg">
 						</div> -->
 						<!-- <div class="swiper-slide">
 							<img class="slide-bg" src="images/index/image-3.jpg">
-						</div> -->
+						</div> 
 						<div class="swiper-slide">
 							<img class="slide-bg" src="images/index/image-4.jpg">
 						</div>
+						-->
 					</div>
 				</div>
 				<div class="content-box animated" data-my-animate="fadeInLeft" style="z-index:1">
 						<div class="content text-center">
-							<h2 class="my-color2"><div>Enhancing the Experience of</div><strong>the Motorized World</strong></h2>
+							<h2 class="my-color2" style="color: rgba(238,240,143,1);"><div>Enhancing the Experience of</div><strong>the Motorized World</strong></h2>
 						</div>
 					</div>
 			</div>
