--- a/m/common/header-en.html
+++ b/m/common/header-en.html
@@ -35,7 +35,7 @@
 			<span class="language" type="ch">中</span>
 			<span class="language active" type="en">EN</span>
 			<span class="email">
-				<a href="http://www.miitbeian.gov.cn"  target="_blank" style="font-size: 14px;">
+				<a href="https://mail.adient.com"  target="_blank" style="font-size: 14px;">
 					<img style="width:40px;" src="images/email.png"/>
 				</a>
 			</span>
