--- a/common/header.html
+++ b/common/header.html
@@ -73,7 +73,7 @@
 									<span class="language active" type="ch">中</span>
 									<span class="language" type="en">EN</span>
 									<span class="email">
-										<a href="http://www.miitbeian.gov.cn"  target="_blank" style="font-size: 14px;">
+										<a href="https://mail.adient.com"  target="_blank" style="font-size: 14px;">
 											<img src="images/email.png"/>
 										</a>
 									</span>
