--- a/m/index-en.html
+++ b/m/index-en.html
@@ -110,13 +110,15 @@
 	<section class="section1">
 		<div id="swiper1" class="swiper-container">
 			<div class="swiper-wrapper">
-				<div class="swiper-slide"><img src="images/index/1-1.jpg" /></div>
+				<div class="swiper-slide"><img src="images/index/1-1.gif" /></div>
+				<!--
 				<div class="swiper-slide"><img src="images/index/1-2.jpg" /></div>
+				-->
 			</div>
 		</div>
 		<div class="content-box wow fadeInLeft" style="z-index:2">
 			<div class="content text-center">
-				<div class="my-color2 font1">
+				<div class="my-color2 font1" style="color: rgba(238,240,143,1);">
 					<div>Enhancing the Experience of</div>
 					<div><strong>the Motorized World</strong></div>
 				</div>
