--- a/about-en.html
+++ b/about-en.html
@@ -223,8 +223,8 @@
 				<img class="slide-bg" src="images/main-slider/image-7.jpg">
 				<div class="content-box">
 					<div class="content text-center">
-						<h2><div class="animated ani-time2 my-color2" data-my-animate="fadeInLeft">To be Pioneer of</div>
-							<div class="animated" data-my-animate="fadeInLeft">green, comfortable, and smart lifestyle</div>
+						<h2><div class="animated ani-time2 my-color2" data-my-animate="fadeInLeft">As a leader in</div>
+							<div class="animated" data-my-animate="fadeInLeft">green, comfortable and smart lifestyles</div>
 						</h2>
 					</div>
 				</div>
@@ -236,9 +236,9 @@
 					<div class="content content1 animated" data-my-animate="fadeInLeft">
 						<h3 class="animated ani-time2" data-my-animate="fadeInLeft">
 							<div class="cont1">Mission</div>
-							<div class="cont2">Create an eco-system for customers, suppliers, employees,</div>
-							<div class="cont2"> shareholders and society and become a respected cooperation. </div>
-						</h3>
+							<div class="cont2">To be a respected company with creating a win-win ecosystem</div>
+							<div class="cont2">for consumers, suppliers, employees, shareholders and society</div>
+						</h3> 
 					</div>
 					<div class="content content2 animated" data-my-animate="fadeInRight">
 						<h3 class="animated ani-time2" data-my-animate="fadeInRight">
@@ -491,7 +491,7 @@
 										<div class="inner" data-wow-delay="900ms" data-wow-duration="1500ms">
 											<div class="img-box">
 													<img class="counter-img" src="images/icons/round_03.png">
-													<h5 class="counter-title">4000+ employees</h5>
+													<h5 class="counter-title">3400+ employees</h5>
 											</div>
 										</div>
 									</div>
