--- a/index-en.html
+++ b/index-en.html
@@ -222,7 +222,7 @@
 				</div>
 				<div class="content-box animated" data-my-animate="fadeInLeft" style="z-index:1">
 						<div class="content text-center">
-							<h2 class="my-color2" style="color: rgba(238,240,143,1);"><div>Enhancing the Experience of</div><strong>the Motorized World</strong></h2>
+							<h2 class="my-color2" style="color: rgba(238,240,143,1);"><div>Improving the experience of</div><strong>a world in motion</strong></h2>
 						</div>
 					</div>
 			</div>
@@ -353,13 +353,13 @@
 					<span>manufacturing plants</span>
 				</div>
 				<div class="content content3 inner count-box animated" data-my-animate="fadeInLeft" data-wow-delay="600ms" data-wow-duration="1500ms">
-					<span class="count-text mytimer my-color2 font2" data-speed="6000" data-stop="4000" >0</span>
+					<span class="count-text mytimer my-color2 font2" data-speed="6000" data-stop="3400" >0</span>
 					<span class="my-color2 font2">+</span>
 					<!-- <span class="space">名</span> -->
 					<span class="counter-title">employee</span>
 				</div>
 				<div class="content content4 inner count-box animated" data-my-animate="fadeInLeft" data-wow-delay="900ms" data-wow-duration="1500ms">
-					<span class="count-text mytimer my-color2 font2" data-speed="8000" data-stop="50" >0</span>
+					<span class="count-text mytimer my-color2 font2" data-speed="6000" data-stop="4.8" >0</span>
 					<span class="space">billion</span>
 					<span class="counter-title" >Sales in 2018</span>
 				</div>
