--- a/m/about-en.html
+++ b/m/about-en.html
@@ -190,8 +190,8 @@
 	<section class="section1">
 		<img src="images/about/1-1.jpg" />
 		<div class="content my-column-center font1 wow fadeInUp">
-			<div class="animated ani-time2 my-color2" data-my-animate="fadeInLeft">To be Pioneer of</div>
-			<div class="animated my-color1" data-my-animate="fadeInLeft">green, comfortable, and smart lifestyle</div>
+			<div class="animated ani-time2 my-color2" data-my-animate="fadeInLeft">As a leader in</div>
+			<div class="animated my-color1" data-my-animate="fadeInLeft">green, comfortable and smart lifestyles</div>
 		</div>
 	</section>
 	<section class="section2 my-color1">
@@ -199,9 +199,9 @@
 		<div class="content content1 my-bg-color5 wow fadeInLeft">
 			<div class="wow fadeInLeft ani-time2">
 				<div class="cont1 my-font1">Mission</div>
-				<div class="cont2">Create an eco-system for customers,suppliers,</div>
-				<div class="cont2">employees,shareholders and society</div>
-				<div class="cont2">and become a respected cooperation.</div>
+				<div class="cont2">To be a respected company with creating</div>
+				<div class="cont2">a win-win ecosystem for consumers, suppliers,</div>
+				<div class="cont2">employees, shareholders and society</div>
 			</div>
 			
 		</div>
@@ -407,7 +407,7 @@
 				</div>
 				<div class="item-box">
 					<img src="images/icons/round_03.png" />
-					<div class="text">4000+ employees</div>
+					<div class="text">3400+ employees</div>
 				</div>
 			</div>
 			<div class="current-info animated ani-time2">
