--- a/m/index-en.html
+++ b/m/index-en.html
@@ -119,8 +119,8 @@
 		<div class="content-box wow fadeInLeft" style="z-index:2">
 			<div class="content text-center">
 				<div class="my-color2 font1" style="color: rgba(238,240,143,1);">
-					<div>Enhancing the Experience of</div>
-					<div><strong>the Motorized World</strong></div>
+					<div>Improving the experience of</div>
+					<div><strong>a world in motion</strong></div>
 				</div>
 			</div>
 		</div>
@@ -240,12 +240,12 @@
 		<div class="content my-color1 wow fadeInLeft">
 			<div class="cont1 my-color2 font1">Business Overview</div>
 			<div class="cont2 count-box inner">
-				<span class="count-text mytimer my-color2 my-font7" data-speed="6000" data-stop="4000" >0</span><span class="my-color2 my-font7">+</span>
+				<span class="count-text mytimer my-color2 my-font7" data-speed="6000" data-stop="3400" >0</span><span class="my-color2 my-font7">+</span>
 				<!-- <span class="space">名</span> -->
 				<span class="counter-title">employee</span>
 			</div>
 			<div class="cont3 count-box inner">
-				<span class="count-text mytimer my-color2 my-font7" data-speed="8000" data-stop="50" >0</span>
+				<span class="count-text mytimer my-color2 my-font7" data-speed="6000" data-stop="4.8" >0</span>
 				<span class="space">billion</span>
 				<span class="counter-title" >Sales in 2018</span>
 			</div>
