pc端首页新增，社会责任

--- a/index.html
+++ b/index.html
@@ -185,6 +185,54 @@
     top: 15%;
     right: 20%;
 }
+.slide9{
+	display: flex;
+	justify-content: space-between;
+}
+.slide9>div{
+	position: relative;
+}
+.slide9 .left-box{
+	width: 33%;
+	font-size: 32px;
+	font-weight: 600;
+}
+.slide9 .text-box{
+	top: 20%;
+	bottom: 0;
+}
+.slide9 .right-box{
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	width: 66.5%;
+}
+.slide9 .right-box>div{
+	position: relative;
+	
+}
+.slide9 .right-box img{
+	width:100%;
+}
+.slide9 .right-box .item-box1{
+	display: flex;
+	height: 69%;
+}
+.slide9 .right-box .item-box2{
+	display: flex;
+	justify-content: space-between;
+	height: 30.3%;
+	
+}
+.slide9 .item-box2 .img-box{
+	display: flex;
+	width: 33%;
+}
+.slide9 .icon_logo{
+	position: absolute;
+    bottom: 15%;
+    width: 70%;
+}
 </style>
 </head>
 
@@ -389,6 +437,37 @@
 					<div class="item-box animated" data-my-animate="fadeInLeft">
 						<img src="images/index/6-2.jpg">
 						<div class="cont-box my-bg-color5 animated">春晚</div>
+					</div>
+				</div>
+			</div>
+			<!--第9屏-->
+			<div class="swiper-slide slide9 my-bg-color7 ">
+				<div class="left-box">
+					<img class="slide-bg" src="images/index/9-1.jpg">
+					<div class="text-box my-row-center">
+						<h2 style="text-align:left"><div class="animated my-color2" data-my-animate="fadeInLeft"  style="font-weight:600;margin-bottom:10px">社会责任</div>
+							<div class="animated ani-time2" data-my-animate="fadeInLeft">
+								<div>我们的爱</div>
+								<div>在同一片蓝天下</div>
+							</div>
+						</h2>
+						<img class="icon_logo" src="images/icons/logo_lt.png">
+					</div>
+				</div>
+				<div class="right-box">
+					<div class="item-box1">
+						<img src="images/index/9-2.jpg">
+					</div>
+					<div class="item-box2">
+						<div class="img-box">
+							<img src="images/index/9-3.jpg">
+						</div>
+						<div class="img-box">
+							<img src="images/index/9-4.jpg">
+						</div>
+						<div class="img-box">
+							<img src="images/index/9-5.jpg">
+						</div>
 					</div>
 				</div>
 			</div>
