移动端首页添加一屏

--- a/m/index-en.html
+++ b/m/index-en.html
@@ -93,6 +93,31 @@
 	top: 10%;
 	left: 40px;
 }
+.section8{
+	margin-bottom: 5px;
+}
+.section8>div{
+	position: relative;
+}
+.section8 .content1>div{
+	width: 100%;
+	text-align: center;
+}
+.section8 .content2{
+	margin-top: 5px;
+}
+.section8 .content3{
+	margin: 5px 0;
+	display: flex;
+	justify-content: space-between;
+}
+.section8 .content3 .item-box{
+	position: relative;
+	width: 32.5%;
+}
+.section8 .content4 .icon_logo{
+	width:33%;
+}
 </style>
 </head>
 
@@ -287,6 +312,36 @@
 					<div class="text my-bg-color5">Spring Festival Gala Evening</div>
 				</div>
 			</div>
+		</div>
+	</section>
+	<section class="section8 my-bg-color2">
+		<div class="content1">
+			<img src="images/index/8-1.jpg" />
+			<div class="my-all-center font1">
+				<div class="my-color2 wow fadeInLeft">Social responsibility</div>
+				<div class="my-color1 wow fadeInLeft" style="margin-top: 10px">
+					<div>Our love</div>
+					<div>Under the same blue sky</div>
+				</div>
+			</div>
+		</div>
+		<div class="content2">
+			<img src="images/index/8-2.jpg" />
+		</div>
+		<div class="content3">
+			<div class="item-box">
+				<img src="images/index/8-3.jpg">
+			</div>
+			<div class="item-box item-box2">
+				<img src="images/index/8-4.jpg">
+			</div>
+			<div class="item-box">
+				<img src="images/index/8-5.jpg">
+			</div>
+		</div>
+		<div class="content4">
+			<img src="images/index/8-6.jpg">
+			<img class="icon_logo my-all-center" src="images/icons/logo_lt.png">
 		</div>
 	</section>
 	<section class="section7">
