头部添加供应商按钮

--- a/common/header.html
+++ b/common/header.html
@@ -5,7 +5,7 @@
 		<div class="auto-container clearfix">
 			<!--Logo-->
 			<div class="logo pull-left">
-				<a href="index.html" class="img-responsive"><img src="images/logo.png" style="height: 55px;"></a>                </div>
+				<a href="index.html" class="img-responsive"><img src="images/logo.png" style="height: 50px;"></a>                </div>
 			
 			<!--Right Col-->
 			<div class="right-col pull-right">
@@ -75,6 +75,11 @@
 									<span class="email">
 										<a href="https://mail.adient.com"  target="_blank" style="font-size: 14px;">
 											<img src="images/email.png"/>
+										</a>
+									</span>
+									<span class="supplier email">
+										<a href="supplier.html"  target="_blank" style="font-size: 14px;">
+											<img src="images/supplier.png"/>
 										</a>
 									</span>
 								</li>
