--- a/m/common/header-en.html
+++ b/m/common/header-en.html
@@ -39,6 +39,11 @@
 					<img style="width:40px;" src="images/email.png"/>
 				</a>
 			</span>
+			<span class="supplier" style="margin-left:16px">
+				<a href="supplier-en.html"  target="_blank" style="font-size: 14px;">
+					<img style="width:40px;" src="images/supplier.png"/>
+				</a>
+			</span>
 		</li>
 	</ul>
 </div>
