首屏添加文字描述

--- a/index-en.html
+++ b/index-en.html
@@ -228,6 +228,9 @@
 	height: 30.3%;
 	
 }
+.slide9 .img-box{
+	position: relative;
+}
 .slide9 .item-box2 .img-box{
 	display: flex;
 	width: 33%;
@@ -236,6 +239,17 @@
 	position: absolute;
     bottom: 15%;
     width: 40%;
+}
+.slide9 .cont-box{
+	position: absolute;
+    bottom: 0px;
+    left: 0;
+    width: 100%;
+    text-align: center;
+    font-size: 18px;
+    height: 40px;
+    line-height: 40px;
+	display: none;
 }
 </style>
 </head>
@@ -460,18 +474,22 @@
 					</div>
 				</div>
 				<div class="right-box">
-					<div class="item-box1">
+					<div class="item-box1 img-box">
 						<img src="images/index/9-2.jpg">
+						<div class="cont-box my-bg-color5 animated">College Students Leadership Challenge</div>
 					</div>
 					<div class="item-box2">
 						<div class="img-box">
 							<img src="images/index/9-3.jpg">
+							<div class="cont-box my-bg-color5 animated">Run for love</div>
 						</div>
 						<div class="img-box">
 							<img src="images/index/9-4.jpg">
+							<div class="cont-box my-bg-color5 animated">Open Day</div>
 						</div>
 						<div class="img-box">
 							<img src="images/index/9-5.jpg">
+							<div class="cont-box my-bg-color5 animated">Students assistance</div>
 						</div>
 					</div>
 				</div>
