--- a/index.html
+++ b/index.html
@@ -224,6 +224,9 @@
 	height: 30.3%;
 	
 }
+.slide9 .img-box{
+	position: relative;
+}
 .slide9 .item-box2 .img-box{
 	display: flex;
 	width: 33%;
@@ -232,6 +235,17 @@
 	position: absolute;
     bottom: 15%;
     width: 70%;
+}
+.slide9 .cont-box{
+	position: absolute;
+    bottom: 0px;
+    left: 0;
+    width: 100%;
+    text-align: center;
+    font-size: 18px;
+    height: 40px;
+    line-height: 40px;
+	display: none;
 }
 </style>
 </head>
@@ -455,18 +469,22 @@
 					</div>
 				</div>
 				<div class="right-box">
-					<div class="item-box1">
+					<div class="item-box1 img-box">
 						<img src="images/index/9-2.jpg">
+						<div class="cont-box my-bg-color5 animated">大学生领导力挑战赛</div>
 					</div>
 					<div class="item-box2">
 						<div class="img-box">
 							<img src="images/index/9-3.jpg">
+							<div class="cont-box my-bg-color5 animated">为爱奔跑</div>
 						</div>
 						<div class="img-box">
 							<img src="images/index/9-4.jpg">
+							<div class="cont-box my-bg-color5 animated">校企开放日</div>
 						</div>
 						<div class="img-box">
 							<img src="images/index/9-5.jpg">
+							<div class="cont-box my-bg-color5 animated">关爱助学</div>
 						</div>
 					</div>
 				</div>
