--- a/m/index.html
+++ b/m/index.html
@@ -95,6 +95,18 @@
 .section8>div{
 	position: relative;
 }
+.section8 .item-box{
+	position: relative;
+}
+.section8 .item-box .text{
+	position: absolute;
+	width: 100%;
+	padding: 5px 0;
+	bottom: 0;
+	text-align: center;
+	font-size: 0.75rem;
+	color: #fff;
+}
 .section8 .content1>div{
 	width: 100%;
 	text-align: center;
@@ -322,18 +334,22 @@
 				</div>
 			</div>
 		</div>
-		<div class="content2">
+		<div class="content2 item-box">
 			<img src="images/index/8-2.jpg" />
+			<div class="text my-bg-color5">大学生领导力挑战赛</div>
 		</div>
 		<div class="content3">
 			<div class="item-box">
 				<img src="images/index/8-3.jpg">
+				<div class="text my-bg-color5">为爱奔跑</div>
 			</div>
 			<div class="item-box item-box2">
 				<img src="images/index/8-4.jpg">
+				<div class="text my-bg-color5">校企开放日</div>
 			</div>
 			<div class="item-box">
 				<img src="images/index/8-5.jpg">
+				<div class="text my-bg-color5">关爱助学</div>
 			</div>
 		</div>
 		<div class="content4">
